# Speaker-Classification-Hackenza-2026

./: .gitignore  Classifier.py  Features.py  README.md  Segment.py  Stdaudio.py  VAD.py  main.py  pyproject.toml  requirements.txt
configs/: config.py
outputs/models/: feature_info.npz  metrics.json
scripts/: extract_features.py  predict.py  run.py  train.py
share-data/: wav_converted.csv
share-data/test/: test_wav_converted.csv
src/: __init__.py  pipeline.py
src/features/: __init__.py  embeddings.py  extraction.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  classifier.py
src/preprocessing/: __init__.py  audio.py  augment.py  segment.py  vad.py
src/utils/: __init__.py  io.py  metrics.py
tests/: test_pipeline.py
